# plasticFlowers

./: .env.example  .gitignore  GEMINI.md  INFORMATION_FLOW_ANALYSIS.md  LICENSE  Makefile  NEO4J_IMPLEMENTATION_SPEC.md  README.md  blind_diag_results.txt  blind_neo4j_async_results.txt  blind_neo4j_results.txt  blind_sdk_results.txt  check_config.py  debug_httpx.txt  debug_httpx_utf8.txt  debug_imports.txt  debug_output.txt  debug_schema_imports.txt  driver_lifecycle_log.txt  driver_log.txt  graph_db_log.txt  import_log.txt  pipeline_log.txt  pytest_output.txt  read_test_output.py  tavily_test.txt  test_schema_write.txt  test_schema_write_utf8_v2.txt  test_tavily_httpx.txt  test_tavily_httpx_v2.txt  verify_output.txt  verify_phase1.py  verify_phase2.py  verify_phase2.txt  verify_phase3.py  verify_phase3.txt  verify_phase4.py  verify_phase4.txt  verify_result.txt
backend/: README.md  check_ghosts.py  check_quota.py  check_session.py  demo_10min.py  driver_log.txt  graph_db_log.txt  list_models.py  manual_test_embedding_exclusion.py  pyproject.toml  requirements.txt  setup_vertex.py  verify_models_strict.py
backend/app/: __init__.py  config.py  main.py
backend/app/agents/: __init__.py  (+3 more)
backend/plasticflower_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/scripts/: dev_server.py  explore_graph.py  manual_test_vector_search.py  neo4j_diag.py  smoke_test.py  test_clustering_edge_cases.py  test_live_session.py
backend/tests/: __init__.py  fakes.py  test_builder_agent.py  test_builder_service.py  test_flower_lifecycle.py  test_gardener_scheduler.py  test_graph_db.py  test_health.py  test_llm.py  test_redis_streams.py  test_researcher.py  test_similarity.py  test_sse_manager.py  test_tavily_mcp.py
(+387 files in other folders)
