[project]
name = "plasticflower-backend"
version = "0.1.0"
description = "FastAPI backend for plasticFlower"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.115.2",
    "uvicorn[standard]==0.30.1",
    "python-dotenv==1.0.1",
    "pydantic-settings==2.6.1",
    "neo4j==5.23.1",
    "google-generativeai>=0.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.4",
    "pytest-asyncio==0.24.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
