[project]
name = "plasticflower-backend"
version = "0.1.0"
description = "FastAPI backend for plasticFlower"
readme = "README.md"
requires-python = ">=3.11"
# Single source of truth for Python dependencies (requirements.txt just
# installs this file via `-e .[dev]`). Ranges are anchored to the versions
# the suite is tested against; bump deliberately, not by drift.
dependencies = [
    "fastapi~=0.139",
    "uvicorn[standard]~=0.30",
    "python-dotenv~=1.0",
    "pydantic~=2.13",
    "pydantic-settings~=2.6",
    "neo4j~=5.23",
    "google-genai~=2.10",
    "sse-starlette~=1.8",
    "redis~=8.0",
    "numpy~=2.4",
    "httpx~=0.28",
    "httpx-sse~=0.4",
]

[project.optional-dependencies]
dev = [
    "pytest~=9.1",
    "pytest-asyncio~=1.4",
    # Used only by manual scripts (scripts/smoke_test.py, scripts/diagnostics/).
    "requests~=2.34",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.setuptools.packages.find]
include = ["app*"]
